# kubeflow-vertex-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
components/data_ingestion/: component.py  requirements.txt
components/data_preprocessing/: Dockerfile
components/data_preprocessing/src/: preprocess.py
components/deployment/: Dockerfile  requirements.txt
components/deployment/src/: deploy.py
components/evaluation/: Dockerfile
components/evaluation/src/: evaluate.py
components/preprocessing/: Dockerfile  component.py  requirements.txt
components/training/: Dockerfile  component.py  requirements.txt
components/training/src/: train.py
config/: pipeline_config.yaml
local/: run_local.py
pipeline/: compile_pipeline.py  pipeline.py
scripts/: build_components.sh  run_pipeline.py
tests/: test_components.py
vertex_ai/: config.yaml  submit_pipeline.py
